// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a small inline spinner 1`] = `
<div
  aria-busy={true}
  aria-label="loading"
  className="spinner small inline"
  role="alert"
/>
`;

exports[`renders the inline spinner 1`] = `
<div
  aria-busy={true}
  aria-label="loading"
  className="spinner inline"
  role="alert"
/>
`;

exports[`renders the small spinner 1`] = `
<div
  aria-busy={true}
  aria-label="loading"
  className="spinner small"
  role="alert"
/>
`;

exports[`renders the spinner 1`] = `
<div
  aria-busy={true}
  aria-label="loading"
  className="spinner"
  role="alert"
/>
`;
